--- a/.local.env
+++ b/.local.env
@@ -2,7 +2,7 @@ DATABASE_HOST=localhost
 DATABASE_PORT=5432
 DATABASE_USER=postgres
 DATABASE_PASSWORD=carrynum1
-DATABASE_NAME=education
+DATABASE_NAME=cloud_storage
 
 API_PORT=5000
 
