--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/swagger": "^7.1.16",
     "@nestjs/typeorm": "^10.0.1",
     "argon2": "^0.40.1",
+    "aws-sdk": "^2.1615.0",
     "cross-env": "^7.0.3",
     "lint-staged": "^15.2.0",
     "nestjs-cls": "^3.6.0",
@@ -47,6 +48,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^2.0.12",
