--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.3",
+    "@nestjs/serve-static": "^4.0.2",
     "@nestjs/swagger": "^7.1.17",
     "@nestjs/typeorm": "^10.0.1",
     "@turf/along": "^6.5.0",
@@ -41,6 +42,7 @@
     "axios": "^1.6.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cookie-parser": "^1.4.6",
     "install": "^0.13.0",
     "multer": "^1.4.5-lts.1",
     "npm": "^10.3.0",
@@ -60,6 +62,7 @@
     "@nestjs/testing": "^10.0.0",
     "@turf/turf": "^6.5.0",
     "@types/aws-sdk": "^2.7.0",
+    "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.11",
